# smp_scraper

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.devcontainer/: post-create.sh
apps/scraper/: Dockerfile  README.md  dependencies.py  items.py  pipelines.py  pyproject.toml  settings.py
apps/scraper/spiders/: quotes_spider.py
dags/scraper_dag/: README.md  __init__.py  main.py  pyproject.toml  quotes_scraper_dag.py
dags/scraper_dag/utils/: __init__.py  database_utils.py
libs/db/: pyproject.toml
libs/db/src/db/: __init__.py  alembic.ini  config.py  database.py
libs/db/src/db/alembic/: env.py
libs/db/src/db/alembic/versions/: 05864827ef32_create_quotes_table.py
libs/db/src/db/models/: __init__.py  orm.py
libs/db/src/db/repositories/: __init__.py  quotes.py
scripts/: migrate.sh
tests/: test_quotes_spider.py
