[project]
name = "web-scraper"
version = "0.1.0"
description = "A web scraping project using Scrapy"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["db", "scraper"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0"]

[tool.uv.workspace]
members = ["apps/scraper", "libs/db", "dags/scraper_dag"]

[tool.uv.sources]
db = { workspace = true }
scraper = { workspace = true }
scraper_dag = { workspace = true }
